# dlfcn_compat

./: README.md  build.gradle  gradle.properties
app/: build.gradle  demo.keystore
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  sample.cpp
app/src/main/java/io/github/lizhangqu/dlfcn/sample/: App.java  MainActivity.java  NativeBridge.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
dlfcn/: CMakeLists.txt  dlfcn_compat.cpp  dlfcn_nougat.cpp
dlfcn/include/: dlfcn_compat.h
gradle/wrapper/: gradle-wrapper.properties
